# stream

./: .clang-format  .travis.yml  CMakeLists.txt  README.md  build.py  conanfile.py
include/output_view/: transform.h
include/stream/: action.h  callback.h  transform.h
liboutput_view/: filter.hpp  filter.test.cpp  take_until.hpp  take_until.test.cpp  take_while.hpp  take_while.test.cpp  transform.hpp  transform.test.cpp
libstream/: action.hpp  action.test.cpp  callback.hpp  demultiplex.hpp  demultiplex.test.cpp  filter.hpp  filter.test.cpp  pipe.hpp  pipe.test.cpp  stream.hpp  take_until.hpp  take_until.test.cpp  transform.hpp  transform.test.cpp
libstream/concepts/: executor.hpp  pipe.hpp  stream.hpp
libstream/detail/: context.hpp
output_view/: transform.hpp  transform.test.cpp
stream/: action.hpp  action.test.cpp  callback.hpp  transform.hpp  transform.test.cpp
test/: CMakeLists.txt  action_test.cpp  range_matcher.h  range_matcher.hpp  transform_test.cpp  transform_view_test.cpp
test/mocks/: readstream.h  readstream.hpp  writestream.h  writestream.hpp
tests/: CMakeLists.txt  interoperability.cpp  interoperability.test.cpp  range_matcher.hpp
tests/helpers/: constrained_types.hpp  range_matcher.hpp  submit_tester.hpp
tests/mocks/: action.hpp  callback.hpp  readstream.hpp  readwritestream.hpp  writestream.hpp
